tests/ui/associated-type-bounds/suggest-removing-impl.stderr
error: expected a trait, found type
  --> $DIR/suggest-removing-impl.rs:2:17
   |
LL |     type Assoc: impl Sized;
   |                 ^^^^^^^^^^
   |
help: use the trait bounds directly
   |
LL -     type Assoc: impl Sized;
LL +     type Assoc: Sized;
   |

error: expected a trait, found type
  --> $DIR/suggest-removing-impl.rs:8:12
   |
LL |         T: impl Sized
   |            ^^^^^^^^^^
   |
help: use the trait bounds directly
   |
LL -         T: impl Sized
LL +         T: Sized
   |

error: aborting due to 2 previous errors

